# embedded-car

./: .gitattributes  .gitignore  Cargo.toml  CircuitDesign.fzz  Justfile  README.md  STORY.md  flake.nix  rust-toolchain.toml  sketch_apr17a.ino
.cargo/: config.toml
.helix/: languages.toml
car-alternate-core/: Cargo.toml  build.rs
car-alternate-core/.cargo/: config.toml
car-alternate-core/src/: main.rs
car-controller/: Cargo.toml
car-controller/src/: bluetooth.rs  gamepad.rs  lib.rs  main.rs
car-core/: Cargo.toml  build.rs  memory.x  rust-toolchain.toml
car-core/.cargo/: config.toml
car-core/src/: hc06.rs  hcsr04.rs  l298n.rs  main.rs
car-core/src/components/: hc06.rs  hcsr04.rs  l298n.rs  mod.rs  sg90.rs
car-transport/: Cargo.toml
car-transport/src/: lib.rs
src/: hc06.rs  hcsr04.rs  l298n.rs  main.rs  sg90.rs
