[package]
name = "embedded-car"
authors = ["Milo Moisson"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[dependencies.embassy-executor]
git = "https://github.com/embassy-rs/embassy.git"
branch = "master"
features = ["nightly", "defmt", "integrated-timers"]

[dependencies.embassy-stm32]
git = "https://github.com/embassy-rs/embassy.git"
branch = "master"
features = ["stm32f103c8", "nightly", "defmt", "time-driver-tim4", "exti"]

[dependencies.embassy-time]
git = "https://github.com/embassy-rs/embassy.git"
branch = "master"
features = ["nightly", "defmt"]

[profile.release]
codegen-units = 1
# Symbols are nice and they don't increase the size on Flash
debug = true
lto = true
