[workspace]
resolver = "2"
members = [
    "car-controller",
    "car-transport",
]
# Until a better way exists to include crates with
# different targets in the same workspace.
exclude = ["car-core"]

[workspace.dependencies]
car-transport = { path = "car-transport" }

[workspace.lints]
[workspace.lints.rust]
dead_code = { priority = 1, level = "allow" }
[workspace.lints.clippy]
cargo = "warn"
nursery = "warn"
pedantic = "warn"

dbg_macro = "warn"
missing_docs_in_private_items = "warn"
todo = "warn"
unwrap_used = "warn"
[workspace.lints.rustdoc]
all = "warn"
