[package]
name = "car-controller"
version = "0.1.0"
description = "A core to control the car via Bluetooth"
repository = "https://github.com/MrNossion/embedded-car"
authors = ["Milo Moisson"]
keywords = ["embedded", "car", "stm32f103c8", "bluetooth", "blue-pill"]
categories = ["embedded"]
readme = "README.md"
edition = "2021"
license = "MIT"

[dependencies]
car-transport = { version = "0.1.0", path = "../car-transport" }

btleplug = "0.10.5"
color-eyre = "0.6.2"
egui = "0.22.0"
futures = "0.3.28"
gilrs = "0.10.2"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
