lints.workspace = true

[package]
name = "car-controller"
version = "0.1.0"
description = "A core to control the car via Bluetooth"
repository = "https://github.com/MrNossion/embedded-car"
authors = ["Milo Moisson"]
keywords = ["embedded", "car", "stm32f103c8", "bluetooth", "blue-pill"]
categories = ["embedded"]
readme = "README.md"
edition = "2024"
license = "MIT"

[dependencies]
car-transport = { workspace = true }

btleplug = "0.11"
color-eyre = "0.6"
egui = "0.31"
futures = "0.3"
gilrs = "0.11"
thiserror = "2"
tokio = { version = "1.28", features = ["full"] }
pretty_env_logger = "0.5"
log = "0.4"
serialport = "4"
clap = { version = "4.5.37", features = ["derive"] }

[features]
default = ["classic-bt"]

classic-bt = []
ble = []
