[package]
name = "car-core"
version = "0.1.0"
description = "Implementation of the car logic and communication protocol"
repository = "https://github.com/MrNossion/embedded-car"
authors = ["Milo Moisson"]
keywords = ["embedded", "car", "stm32f103c8", "bluetooth", "blue-pill"]
categories = ["embedded"]
readme = "../README.md"
license = "MIT"
edition = "2021"

[[bin]]
name = "car-core"
test = false
bench = false

[dependencies]
car-transport = { workspace = true, features = ["defmt"] }

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.2"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.7.16", features = ["defmt-impl"] }

embassy-executor = { version = "0.5", features = [
	"defmt",
	"integrated-timers",
	"arch-cortex-m",
	"executor-thread",
] }
embassy-time = { version = "0.3", features = ["defmt"] }
embassy-stm32 = { version = "0.1", features = [
	"defmt",
	"stm32f103c8",
	"time-driver-tim4",
	"exti",
] }
