[package]
name = "car-core"
version = "0.1.0"
description = "Implementation of the car logic and communication protocol"
repository = "https://github.com/MrNossion/embedded-car"
authors = ["Milo Moisson"]
keywords = ["embedded", "car", "stm32f103c8", "bluetooth", "blue-pill"]
categories = ["embedded"]
readme = "../README.md"
license = "MIT"
edition = "2021"

[[bin]]
name = "car-core"
test = false
bench = false

[profile.dev]
opt-level = "z"
[profile.release]
debug = 2

[dependencies]
car-transport = { path = "../car-transport", features = ["defmt"] }

cortex-m = { version = "0.7.7", features = [
	"critical-section-single-core",
	"inline-asm"
] }
cortex-m-rt = "0.7.2"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-executor = { version = "0.5", features = [
	"arch-cortex-m",
	"defmt",
	"executor-thread",
	"integrated-timers",
] }
embassy-time = { version = "0.3", features = [
	"defmt",
	"defmt-timestamp-uptime",
	# Taken from the embassy examples. Corresponds to LSE Oscilliators frequency?
	"tick-hz-32_768"
] }
embassy-stm32 = { version = "0.1", features = [
	"defmt",
	"exti",
	"memory-x",

	"stm32f103c8",
	"time-driver-tim4",
] }

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy" }
embassy-time = { git = "https://github.com/embassy-rs/embassy" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy" }

[workspace.lints]
[workspace.lints.rust]
dead_code = { priority = 1, level = "allow" }
[workspace.lints.clippy]
cargo = "warn"
nursery = "warn"
pedantic = "warn"

dbg_macro = "warn"
missing_docs_in_private_items = "warn"
todo = "warn"
unwrap_used = "warn"
[workspace.lints.rustdoc]
all = "warn"
